ros2_ws/log/build_2023-04-12_18-35-10/publisher/stderr.log
  File "C:\SET-BETA-Spring2023\ros2_ws\install\Lib\site-packages\publisher\wheel_drive.py", line 24
    if msg.data = 'w' :
                ^
SyntaxError: invalid syntax

